--- a/projstyle1.css
+++ b/projstyle1.css
@@ -142,7 +142,7 @@ html,body{
     position: absolute;
     z-index: 999;
     height: 140%;
-    display: none;
+    opacity: 0.8;
     
 }
 #about{
